<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/dialog_new_record_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_header_height"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dialog_new_record_income_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/neutralGrey"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_new_record_income_btn"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_new_record_expense_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/neutralGrey"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_new_record_expense_btn"
                    android:textAlignment="viewStart" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_new_record_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_new_record_sign_label"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:text="+" />

            <EditText
                android:id="@+id/dialog_new_record_amount_number"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/dialog_new_record_currency_label"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:text="XX" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_new_record_cancle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_new_record_cancel_btn" />

            <Button
                android:id="@+id/dialog_new_record_another_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_new_record_addmore_btn" />

            <Button
                android:id="@+id/dialog_new_record_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_new_record_save_btn" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>